# nlp-model-lab

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  INSTALLATION.md  PROJECT_STRUCTURE.md  README.md  install.ps1  install.sh  pyproject.toml  requirements-accelerate.txt  requirements-api.txt  requirements-core.txt  requirements-cpu.txt  requirements-dev.txt  requirements-peft.txt  requirements-viz.txt  requirements.txt  setup.py
.claude/: settings.local.json
configs/base/intent_classification/: bert-base-chinese.yaml
configs/experiments/: intent_classification_customer_service.yaml
data/examples/text_classification/: train.jsonl
examples/: __init__.py  quickstart.py
inference/text_classification/: text_classification_api.py
label_maps/: intent_labels.json
scripts/: validate_jsonl.py
scripts/eval/: evaluate_intent.py
scripts/inference/: predict_intent.py
scripts/train/: train_intent_classification.py
scripts/utils/: check_cuda.py
src/: __init__.py
src/data/: __init__.py  datasets.py  preprocessors.py
src/inference/: __init__.py  predictor.py
src/training/: __init__.py  metrics.py  trainer.py
src/utils/: __init__.py  common.py  logger.py
tasks/text_classification/: config.yaml  predict.py  train.py
utils/: experiment.py  io.py  metrics.py
